Fix site layout on IE

--- a/_sass/components/_main-header.scss
+++ b/_sass/components/_main-header.scss
@@ -1,4 +1,5 @@
 .c-MainHeader {
+  flex: 0 0 auto;
   position: absolute;
   top: 0;
   left: 0;
