--- a/_sass/components/_screen.scss
+++ b/_sass/components/_screen.scss
@@ -1,4 +1,6 @@
-// .c-Screen {}
+.c-Screen {
+  flex: 0 0 auto;
+}
 
 .c-Screen__Section {
   overflow: hidden;
