--- a/_sass/defaults/_defaults.scss
+++ b/_sass/defaults/_defaults.scss
@@ -10,7 +10,7 @@ html {
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 
 html {
@@ -28,6 +28,7 @@ html {
 
 body {
   display: flex;
+  justify-content: stretch;
   flex-direction: column;
 }
 
